x.y.z
=====

Release date:

New features:

* Add a dedicated delay column
  - Now a note delay can be directly entered on the delay column (0-24 ticks)

Bug fixes:

Other:

1.5.0
=====

Release date:

Fri, 23 Jan 2026 22:08:32 +0200

New features:

* Add option to disable UI updates during playback

* Add velocity key track visualization and offset

Bug fixes:

* Fix velocity interpolation not undo'ed

* Fix broken LBP visualization

Other:

* Busy wait in PlayerWorker for higher precision

* UI performance improvements
  - Optimized Volume Meter triggering
  - LineNumberColums as ListView's
  - SongView as a ListView

1.4.0
=====

Release date:

Mon, 19 Jan 2026 21:12:26 +0200

New features:

* Fix GitHub Issue #27: Implement undo/redo for note data

* Implement velocity key track
  - Set per-instrument in track settings (0-100%)
  - Linearly reduces velocity for higher notes

* Enable live recording on the current column

* Implement adjustable delay per note column

* Implement rate reduction for MIDI CC automations

* Add offset parameter to MIDI CC modulation

* Make it possible to select audio source

Bug fixes:

* Fix track header not properly initialized when new pattern created

1.3.0
=====

Release date:

Wed, 31 Dec 2025 15:32:42 +0200

New features:

* Implement asynchronous loading and show a progress bar

* Implement individual delays for chord notes

* Make it possible to insert a new track also to the left

* Show pattern time / song time / total time on the tool bar

Bug fixes:

* Fix cursor activation on explicit song position change

Other:

* Optimize track creation

1.2.1
=====

Release date:

Sun, 28 Dec 2025 14:00:44 +0200

Bug fixes:

* Fix chord automation applied only on pattern 0

* Fix column muting not stopping active notes by implementing granular active note tracking

* Fix muting a track not immediately stop playing notes in PlayerWorker

* Fix timing inaccuracy in PlayerWorker by sleeping until next tick
