@@ -11,15 +11,7 @@ GroupBox {
     width: parent.width
     clip: true
     function initialize() {
-        note1OffsetSpinBox.value = columnSettingsModel.chordNote1Offset;
-        note1VelocitySpinBox.value = columnSettingsModel.chordNote1Velocity;
-        note1DelaySpinBox.value = columnSettingsModel.chordNote1Delay;
-        note2OffsetSpinBox.value = columnSettingsModel.chordNote2Offset;
-        note2VelocitySpinBox.value = columnSettingsModel.chordNote2Velocity;
-        note2DelaySpinBox.value = columnSettingsModel.chordNote2Delay;
-        note3OffsetSpinBox.value = columnSettingsModel.chordNote3Offset;
-        note3VelocitySpinBox.value = columnSettingsModel.chordNote3Velocity;
-        note3DelaySpinBox.value = columnSettingsModel.chordNote3Delay;
+        // No longer strictly needed if bindings are used, but kept for consistency if needed by caller
     }
     ColumnLayout {
         spacing: 8
@@ -36,6 +28,7 @@ GroupBox {
                 id: note1OffsetSpinBox
                 from: -36
                 to: 36
+                value: columnSettingsModel.chordNote1Offset
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote1Offset = value
@@ -52,6 +45,7 @@ GroupBox {
                 id: note1VelocitySpinBox
                 from: 0
                 to: 200
+                value: columnSettingsModel.chordNote1Velocity
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote1Velocity = value
@@ -68,6 +62,7 @@ GroupBox {
                 id: note1DelaySpinBox
                 from: 0
                 to: 1000
+                value: columnSettingsModel.chordNote1Delay
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote1Delay = value
@@ -83,6 +78,7 @@ GroupBox {
                 id: note2OffsetSpinBox
                 from: -36
                 to: 36
+                value: columnSettingsModel.chordNote2Offset
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote2Offset = value
@@ -98,6 +94,7 @@ GroupBox {
                 id: note2VelocitySpinBox
                 from: 0
                 to: 200
+                value: columnSettingsModel.chordNote2Velocity
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote2Velocity = value
@@ -114,6 +111,7 @@ GroupBox {
                 id: note2DelaySpinBox
                 from: 0
                 to: 1000
+                value: columnSettingsModel.chordNote2Delay
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote2Delay = value
@@ -129,6 +127,7 @@ GroupBox {
                 id: note3OffsetSpinBox
                 from: -36
                 to: 36
+                value: columnSettingsModel.chordNote3Offset
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote3Offset = value
@@ -144,6 +143,7 @@ GroupBox {
                 id: note3VelocitySpinBox
                 from: 0
                 to: 200
+                value: columnSettingsModel.chordNote3Velocity
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote3Velocity = value
@@ -160,11 +160,92 @@ GroupBox {
                 id: note3DelaySpinBox
                 from: 0
                 to: 1000
+                value: columnSettingsModel.chordNote3Delay
                 editable: true
                 Keys.onReturnPressed: focus = false
                 onValueModified: columnSettingsModel.chordNote3Delay = value
                 Layout.row: 2
                 Layout.column: 5
+            }
+        }
+        Flow {
+            Layout.fillWidth: true
+            spacing: 4
+            Button {
+                text: qsTr("Major")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Major chord (0, 4, 7)")
+                onClicked: {
+                    columnSettingsModel.chordNote1Offset = 4;
+                    columnSettingsModel.chordNote2Offset = 7;
+                    columnSettingsModel.chordNote3Offset = 0;
+                }
+            }
+            Button {
+                text: qsTr("Minor")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Minor chord (0, 3, 7)")
+                onClicked: {
+                    columnSettingsModel.chordNote1Offset = 3;
+                    columnSettingsModel.chordNote2Offset = 7;
+                    columnSettingsModel.chordNote3Offset = 0;
+                }
+            }
+            Button {
+                text: qsTr("Dom7")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Dominant 7th chord (0, 4, 7, 10)")
+                onClicked: {
+                    columnSettingsModel.chordNote1Offset = 4;
+                    columnSettingsModel.chordNote2Offset = 7;
+                    columnSettingsModel.chordNote3Offset = 10;
+                }
+            }
+            Button {
+                text: qsTr("Maj7")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Major 7th chord (0, 4, 7, 11)")
+                onClicked: {
+                    columnSettingsModel.chordNote1Offset = 4;
+                    columnSettingsModel.chordNote2Offset = 7;
+                    columnSettingsModel.chordNote3Offset = 11;
+                }
+            }
+            Button {
+                text: qsTr("Min7")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Minor 7th chord (0, 3, 7, 10)")
+                onClicked: {
+                    columnSettingsModel.chordNote1Offset = 3;
+                    columnSettingsModel.chordNote2Offset = 7;
+                    columnSettingsModel.chordNote3Offset = 10;
+                }
+            }
+            Button {
+                text: qsTr("Sus4")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Suspended 4th chord (0, 5, 7)")
+                onClicked: {
+                    columnSettingsModel.chordNote1Offset = 5;
+                    columnSettingsModel.chordNote2Offset = 7;
+                    columnSettingsModel.chordNote3Offset = 0;
+                }
+            }
+            Button {
+                text: qsTr("Dim")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Diminished chord (0, 3, 6)")
+                onClicked: {
+                    columnSettingsModel.chordNote1Offset = 3;
+                    columnSettingsModel.chordNote2Offset = 6;
+                    columnSettingsModel.chordNote3Offset = 0;
+                }
+            }
+            Button {
+                text: qsTr("Reset")
+                ToolTip.visible: hovered
+                ToolTip.text: qsTr("Reset chord automation settings")
+                onClicked: columnSettingsModel.reset()
             }
         }
     }
